# DinoDNS

./: Catalog.toml  Dinofile.toml  README.md  pyproject.toml
dinodns/: cache.py  catalog.py  dnsconfig.py  header.py  main.py  message.py  parser.py  question.py  resolver.py  server.py  utils.py
dinodns/core/: answer.py  header.py  message.py  question.py  resource_record.py
dinodns/core/rr/: classes.py  resource_record.py  types.py
dinodns/core/rr/rdata/: a.py  base.py  cname.py  ns.py  soa.py
