[project]
name = "dinodns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.2.1", "dacite>=1.9.2", "tabulate>=0.9.0"]

[project.scripts]
dinodns = "dinodns.main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
